Hotfix: Email verification - After registration generates user id, timestamp, hash and signature for email verification. - Resending email verification logic was changed. - Additional rules for email validation was added when user creates new account.
