# app/Http/Requests/Authentication/EmailVerificationRequest.php
@@ -1,0 +1,31 @@
+<?php
+
+namespace App\Http\Requests\Authentication;
+
+use Illuminate\Contracts\Validation\ValidationRule;
+use Illuminate\Foundation\Http\FormRequest;
+
+class EmailVerificationRequest extends FormRequest
+{
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, ValidationRule|array|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'id'        => ['integer', 'exists:users,id', 'required'],
+            'expires'   => ['integer', 'required'],
+            'hash'      => ['string', 'required'],
+            'signature' => ['string', 'required'],
+        ];
+    }
+
+    protected function prepareForValidation(): void
+    {
+        $this->merge([
+            'id' => $this->route('id')
+        ]);
+    }
+}
